# uvc_app

./: CMakeLists.txt  camera_uvc.c  main.c  main.cpp  readme.md  test_image.nv12  uvc_MJPEG.sh  uvc_config.sh
ext/: mediactl.c  videodev2.h
include/: rkisp_control_loop.h
src/: main.c  mpi_enc.c  mpi_enc.h  rkcam_capture.c  rkcam_capture.h  rkcam_control.c  rkcam_control.h  uvc-gadget.c  uvc-gadget.h  uvc_control.c  uvc_control.h  uvc_encode.cpp  uvc_encode.h  uvc_video.cpp  uvc_video.h
uvc/: drm.c  drm.h  mpi_enc.c  mpi_enc.h  uevent.c  uevent.h  uvc-gadget.c  uvc-gadget.h  uvc_api.h  uvc_configfs.c  uvc_configfs.h  uvc_control.c  uvc_control.h  uvc_encode.cpp  uvc_encode.h  uvc_gadget.c  uvc_gadget.h  uvc_video.cpp  uvc_video.h  video_common.h  vpu.c  vpu.h
